mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template: # This is pod definition
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - image: mongo-express
          name: mongo-express
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer # To make it an external service(Note: Internal Service acts as a loadbalancer as well).
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000 # This is the port where the external ip-address will open. This port has a specified range 300000-32767
