nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector: # this makes a connection between a connector and its pods.
    app: nginx # this name is the same for nginx deployment and its pods.
  ports:
    - protocol: TCP
      port: 80 # it's listening on port 80
      targetPort: 8080 # this one should match to the container's port number
